Fixed line breaks in messages.

--- a/src/app.scss
+++ b/src/app.scss
@@ -235,6 +235,7 @@ body .message {
     font-size: 21px;
     line-height: 1.3;
     padding: 5px 10px;
+    white-space:pre-line;
 }
 
 html .post {
